# rust_backup

./: .gitignore  Cargo.toml  README.md
src/: backup_creator.rs  backup_files.rs  cli_args.rs  dir_entry_status.rs  file_collector.rs  main.rs  options.rs  string_utils.rs  toml_reader.rs
