[package]
name = "rustbackup"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
system-extensions = {version = "0.0.4", features = ["metadata"]}
toml = "0.5.8"
zip = "0.5.13"
chrono = "0.4.19"
