[package]
name = "rustbackup"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
system-extensions = {version = "0.0.4", features = ["metadata"]}
toml = "0.5.9"
zip = "0.6.2"
chrono = "0.4.19"
gitignore = "1.0.7"
