[package]
name = "rustbackup"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.26"
toml = "0.8.10"
zip = "0.6.2"
chrono = "0.4.34"
ignore = "0.4.22"
winapi = { version = "0.3.9", features = ["winnt"] }
